--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,11 @@
+#conteudo {
+    min-width: 500px;
+    min-height: 20px;
+    background-color: green;
+    color: #fff;
+    padding: 20px;
+}
+/** AULA 05
 .texto-principal {
     color: red;
     text-align: center;
@@ -11,6 +19,7 @@
     padding: 20px;
     color: green;
 }
+*/
 /* AULA 04
 h1, h2, p {
     color: red;
