--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,17 @@
+#exemplo {
+    background-color: green;
+    color: #fff;
+    width: 500px;
+    height: 200px;
+    padding: 10px 20px 30px 30px;
+}
+#exemplo2 {
+    background-color: red;
+    color: #fff;
+    width: 500px;
+    margin: 20px 30px 20px 40px;
+}
+/** AULA 06
 #conteudo {
     min-width: 500px;
     min-height: 20px;
@@ -5,6 +19,7 @@
     color: #fff;
     padding: 20px;
 }
+*/
 /** AULA 05
 .texto-principal {
     color: red;
