--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,20 @@
+p {
+    color: red;
+    text-transform: capitalize;
+}
+h1 {
+    text-align: left;
+    text-decoration: underline;
+}
+h2 {
+    text-align: right;
+    text-decoration: overline;
+}
+h3 {
+    text-align: center;
+    text-decoration: none;
+}
+/** AULA 07
 #exemplo {
     background-color: green;
     color: #fff;
@@ -11,6 +28,7 @@
     width: 500px;
     margin: 20px 30px 20px 40px;
 }
+*/
 /** AULA 06
 #conteudo {
     min-width: 500px;
