--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,10 +1,16 @@
 p {
     color: red;
-    text-transform: capitalize;
+    text-align: justify;
+    text-indent: 20px;
+    line-height: 30px;
+    direction: ltr;
+    letter-spacing: 2px;
+    word-spacing: 4px;
 }
 h1 {
     text-align: left;
     text-decoration: underline;
+    text-shadow: 3px -30px 4px red;
 }
 h2 {
     text-align: right;
