--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+#conteudo {
+    background-color: red;
+    width: 300px;
+    padding: 20px;
+    box-shadow: 10px 10px 5px green;
+}
+/** AULA 08 e 09
 p {
     color: red;
     text-align: justify;
@@ -20,6 +30,7 @@ h3 {
     text-align: center;
     text-decoration: none;
 }
+*/
 /** AULA 07
 #exemplo {
     background-color: green;
