--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,13 @@
+#conteudo {
+    background-color: red;
+    width: 300px;
+    height: 50px;
+    overflow: auto;
+}
+#conteudo p {
+    opacity: 0;
+}
+/** AULA 10
 * {
     box-sizing: border-box;
 }
