--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,10 @@
+#bloco {
+    background-color: green;
+    width: 300px;
+    height: 150px;
+    border-bottom-left-radius: 20px;
+}
+/** AULA 11
 #conteudo {
     background-color: red;
     width: 300px;
@@ -7,6 +14,7 @@
 #conteudo p {
     opacity: 0;
 }
+*/
 /** AULA 10
 * {
     box-sizing: border-box;
