--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,9 +1,18 @@
+*{
+    font-size: 100%;
+ }
+p {
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 2.5em;
+}
+/** AULA 12
 #bloco {
     background-color: green;
     width: 300px;
     height: 150px;
     border-bottom-left-radius: 20px;
 }
+*/
 /** AULA 11
 #conteudo {
     background-color: red;
