--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,8 +1,12 @@
 *{
     font-size: 100%;
  }
+@font-face {
+    font-family: open_sans;
+    src: url(opensans-regular-webfont.woff);
+}
 p {
-    font-family: Arial, Verdana, sans-serif;
+    font-family: open_sans;
     font-size: 2.5em;
 }
 /** AULA 12
