--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,9 @@
+#cores {
+    width: 200px;
+    height: 200px;
+    background-color: hsla(20, 100%, 59%, 0.2);
+}
+/** AULA 13 e 14
 *{
     font-size: 100%;
  }
@@ -9,6 +15,7 @@ p {
     font-family: 'Arimo', sans-serif;
     font-size: 1.2em;
 }
+*/
 /** AULA 12
 #bloco {
     background-color: green;
