--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,10 +1,28 @@
 
+#base {
+    background-color: green;
+    width: 600px;
+    height: 600px;
+}
+#esquerda {
+    background-color: red;
+    width: 300px;
+    height: 300px;
+    float: left;
+}
+#direita {
+    background-color: blue;
+    width: 300px;
+    height: 300px;
+    float: right;
+}
+/** AULA 17
 #cores {
     width: 200px;
     height: 200px;
     background: radial-gradient(red, green);
 }
-
+*/
 /** AULA 13 e 14
 *{
     font-size: 100%;
