--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,6 +1,13 @@
 #exemplo {
-    border-bottom: solid 5px red;
-    outline: dotted 5px green;
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    transition: all 2s linear; 
+}
+#exemplo:hover {
+    width: 350px;
+    height: 350px;
+    background-color: green;
 }
 /** AULA 19
 #conteudo {
