--- a/modulo-01/css/style.css
+++ b/modulo-01/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('../img/bg.jpg') center center/ 100% 100% no-repeat fixed;
+}
+/** AULA 20/21
 #exemplo {
     width: 200px;
     height: 200px;
@@ -9,6 +13,7 @@
     height: 350px;
     background-color: green;
 }
+*/
 /** AULA 19
 #conteudo {
     width: 600px;
